--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Este es un proyecto para fomentar el uso de dinero electronico para dejar de contaminar",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/joscor34/Ristky-API/issues"
   },
-  "homepage": "https://github.com/joscor34/Ristky-API#readme"
+  "homepage": "https://github.com/joscor34/Ristky-API#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.3",
+    "nodemon": "^2.0.2"
+  }
 }
